<resources>
    <string name="app_name">SendBox</string>
    <string name="title_activity_login">Acceder</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>

    <string name="titRegistro">Registro</string>
    <string name="titAnadir">Añadir Paquete</string>
    <string name="etNombre">Nombre</string>
    <string name="etDNI">DNI</string>
    <string name="etMatricula">Matricula del vehículo</string>
    <string name="bAceptar">Aceptar</string>
    <string name="bCancelar">Cancelar</string>
    <string name="etCodigo">Codigo validación</string>
    <string name="txtAdmin">Soy administrador</string>

    <string name="errNombre">El campo nombre no puede estar vacío</string>
    <string name="errDNI">El campo DNI no puede estar vacío</string>
    <string name="errMatricula">El campo Matricula no puede estar vacío</string>
    <string name="errValidacion">Código de validacion erroneo</string>
    <string name="errCampos">Debes rellenar todos los campos.</string>
    <string name="errDuplicado">Codigo ya existente en la base de datos.</string>
    <string name="estEntregado">Entregado</string>
    <string name="estPendiente">Pendiente</string>

    <string name="pqCodigo">Codigo Paquete</string>
    <string name="pqNombre">Nombre Destinatario</string>
    <string name="pqDireccion">Direccion Entrega</string>
    <string name="bAnadir">Añadir</string>
    <string name="bDescartar">Descartar</string>
    <string name="guardado">Registro guardado</string>
    <string name="txtGPS">Debes activar el GPS...</string>

    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="perfil">Mi Perfil</string>

    <string name="dniPer">DNI:</string>
    <string name="matriculaPer">Matricula Vehículo:</string>
    <string name="title_activity_maps">Map</string>
    <string name="titMapa">Mapa</string>
    <string name="titPaquetes">LISTADO DE PAQUETES</string>
    <string name="titTrans">TODOS LOS TRANSPORTISTAS</string>
    <string name="txtInfo">SendBox es una aplicación para el control diario de una empresa de reparto de mensajería.\nGracias a esta,
        los usuarios administradores podrán conocer en todo momento donde se encuentran los diferentes
        transportistas y el estado de los paquetes que lleva cada uno.</string>
    <string name="nomDesarr">Aplicacion desarrollada por <b>Ángel Salas Calvo</b></string>
    <string name="titInfo">Acerca de...</string>
</resources>
